# pymenable

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pymax.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: __init__.py  __main__.py  cli.py  elementsMdn.py
src/pymenable/: __init__.py  config.py
src/pymenable/builders/: __init__.py  tableBuilder.py
src/pymenable/elements/: __init__.py  inline.py  lists.py  tables.py
tests/: test_pymenable.py
