[tool.poetry]
name = "pymenable"
version = "0.1.0"
description = "Python classes to render accessible HTML elements "
authors = ["Joel Dodson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
